# BBB-linux-app

./: README.md  bashControlLED
02_Gerenate_UBoot_RFS/: README.md
03_Buildroot/: README.md
03_Buildroot/BOOT/: MLO  (+2 more)
05_GPIO_Basic/: README.md
06_GPIO_Advanced/: PressButtonAndToggleGPIO.cpp  README.md  callBackFuncWithThread.cpp  callback.cpp  makefile  poll.cpp  toggle.cpp
10_I2C_ADXL345/: ADXL345_I2C.cpp  README.md  adxl345  makefile
12_I2C_RTC_DS3231/: README.md  ebb_clock.service  makefile  rtcds3231.c
20_SPI_74HC595/: 74HC595_SPI.c  makefile
20_SPI_TEST/: README.md  makefile  spitest.c
21_SPI_74HC595/: 74HC595_SPI.c
22_SPI_ADXL345/: ADXL345_SPI.cpp
30_I2C_SPI_ADXL345/: ADXL345_I2C_SPI.cpp
41_UART_GPS/: README.md  gps.c  makefile
61_WebClient_With_ServerThinkspeak/: README.md  crontab_configure  makefile  webclient.cpp
62_WebClient/: WebClient.c
63_Socket_Server_Client/: CMakeLists.txt  client.cpp  server.cpp
63_Socket_Server_Client/include/: SocketClient.cpp  SocketServer.cpp  SocketServer.h
64_Multithreaded_Server/: CMakeLists.txt  client.cpp  server.cpp
99_Extension/: README.md  build  env.cpp  env_arm  env_x86  mail.cpp  uptime.cpp
ADXL345_I2C/: ADXL345_I2C.cpp
Booting_Process/: README.md
Busybox/: README.md
Configure_Modules/: 01_Share_Network.md
ControlLED/: .cproject
ControlLEDByC/: .cproject  .project
ControlLEDByC++/: .cproject
Generate_MLO_RFS/: README.md
Temperature_Sensor_TMP36/: tmp36Raw.cpp
ThingSpeak_Web_Sensor/: SSMTP_Configure
WebSocket/: README.md  webClientSSL.cpp
WebSocket_HTTP/: WebClient.c
(+3278 files in other folders)
